Fixed scrollbar issue

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -11,8 +11,11 @@
   grid-template-areas: 'header' 'main' 'footer';
   align-items: start;
   padding: var(--page-padding);
-  width: calc(100vw - 2 * var(--page-padding));
   max-width: var(--page-max-width);
+}
+
+.page.menuOpen {
+  width: calc(100vw - 2 * var(--page-padding));
 }
 
 .header {
